# wasmgame

./: .gitattributes  .gitconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.sh  wasmgame.code-workspace
.cargo/: config.toml
.github/workflows/: rust.yml
app/: Cargo.toml
app/assets/: cube.blend  cube.mtl  hexatile.blend  hexatile.mtl
app/src/: engine.rs  game.rs  lib.rs  util.rs
app/src/engine/: core.rs  ecs.rs  math.rs  mod.rs  opengl.rs  picker.rs  scene.rs  time.rs  util.rs
app/src/game/: assets.rs  components.rs  meshes.rs  mod.rs  models.rs  shaders.rs  systems.rs
app/src/util/: event.rs  math.rs  opengl.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: engine.rs  game.rs  lib.rs  models.rs  opengl.rs  scene.rs  shaders.rs
src/engine/: math.rs  opengl.rs  picker.rs  scene.rs  util.rs
src/game/: math.rs  meshes.rs  models.rs  shaders.rs
web/: index.html  wasmgame.js  wasmgame_bg.wasm
