[package]
name = "wasmgame"
version = "0.1.0"
authors = ["Folke Behrens <folke@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'KeyboardEvent',
  'Window',
]

[profile.release]
lto = true
opt-level = 3
