[package]
name = "wasmgame"
version = "0.1.0"
authors = ["Folke Behrens <folke@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1"
console_error_panic_hook = { version = "0.1", optional = true }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
js-sys = "0.3"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4"
wasm-bindgen-macro = "0.2.68"
wasm-logger = "0.2"
wasmgame-macros = { path = "../macros" }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  # DOM
  'Document',
  'DomRect',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Window',
  # Events
  'AddEventListenerOptions',
  'Event',
  'EventListener',
  'EventTarget',
  'MouseEvent',
  'Touch',
  'TouchEvent',
  'TouchList',
  # WebGL
  'WebGlBuffer',
  'WebGlContextAttributes',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  # WebGL extensions
  'AngleInstancedArrays',
  'OesVertexArrayObject',
]
